--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -1,9 +1,50 @@
 HTML
 ============
 1.doctype이 무엇을 하는 것인가요?
-```
-  마크업언어(DTD, document Type Definition)에서 문서의 버전을 지정합니다. 웹 브라우저에게 어떤 버전의 문서로 해석하면 되는지를 알려줍니다.
-     ex)<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> XHTML
-     ex)<!DOCTYPE html> ->html5
-```  
+
+  마크업언어(DTD, document Type Definition)에서 웹표준 문서의 버전을 지정합니다. 웹 브라우저에게 어떤 버전의 문서로 해석하면 되는지를 알려주며, 최상단에 위치해야합니다.
+  HTML,XHTML,HTML5 3가지 형식이 존재합니다. 만약에 생략을 하는 경우에는 쿼크모드(Quirks Mode)로 렌더링이 됩니다. 
+  필수사항은 아니지만 하위 브라우저와 호환을위해, 선언하는것을 추천하고 있습니다.
+  
+  * XHTML
+      - Transitional
+      ```
+       <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+      ``` 
+       기존에 문서들과 호환성을 위해서 사용됨. iframe과 target="_blank"를 사용할 수 있다.
+      - Strict
+      ```
+      <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1-strict.dtd">
+      ```
+      말 그대로 엄격한 규격이며, center,u,font,iframe,새창띄우기등이 제한된다.
+      - frameset
+      ```
+      <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1-frameset.dtd">
+      ```
+      지금은 거의 사용하지않는다.
+  
+  * HTML5
+      ```
+      <!DOCTYPE html>
+      ```
+    DTD참조가 따로 필요가 없다
+  * HTML
+    - 최근에는 작성되는 경우가 없다.
+      + strict
+      ```
+      <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+      ```
+      + transitional
+      ```
+      <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+      ```
+      + frameset
+      ```
+      <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+      ```
+참고 링크: [WEBDIR](https://webdir.tistory.com/40)
+
+
+
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
+
