--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -3,7 +3,7 @@ HTML
 1.doctype이 무엇을 하는 것인가요?
 
   마크업언어(DTD, document Type Definition)에서 웹표준 문서의 버전을 지정합니다. 웹 브라우저에게 어떤 버전의 문서로 해석하면 되는지를 알려주며, 최상단에 위치해야합니다.
-  HTML,XHTML,HTML5 3가지 형식이 존재합니다. 만약에 생략을 하는 경우에는 쿼크모드(Quirks Mode)로 렌더링이 됩니다. 
+  HTML,XHTML,HTML5 3가지 형식이 존재합니다. 만약에 생략을 하는 경우에는 [쿼크모드(Quirks Mode)]로 렌더링이 됩니다. 
   필수사항은 아니지만 하위 브라우저와 호환을위해, 선언하는것을 추천하고 있습니다.
   
   * XHTML
@@ -27,7 +27,7 @@ HTML
       ```
       <!DOCTYPE html>
       ```
-    DTD참조가 따로 필요가 없다
+   SGMLd을 기반으로하지않기 때문에, DTD참조가 필요 없다
   * HTML
     - 최근에는 작성되는 경우가 없다.
       + strict
@@ -42,9 +42,41 @@ HTML
       ```
       <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
       ```
-참고 링크: [WEBDIR](https://webdir.tistory.com/40)
+참고 링크1: [WEBDIR](https://webdir.tistory.com/40)
 
+참고 링크2: [C.M.A API](http://chongmoa.com/html/441)
 
+2. 표준모드(standards mode)와 쿽크모드(quirks mode)의 다른 점은 무엇인가요?
+   위에 2가지 모드는 HTML 문서에 맨 위에 선언된 DOCTYPE 에 따라 렌더링 모드를 선택하게 되는데, 이 과정을 Doctype Sniffing 또는 Doctype Switching 이라고 한다.
 
+   * 표준모드(standards mode)로 랜더링이 되어있는 경우
+   
+      1.DOCTYPE이 선언되어있을때
+   
+      2.브라우저가 선언된 DOCTYPE에 따라 최신(W3C 표준)에 문서가 맞다고 판단 될때
+   
+      3.DTD에  FPI(formal public identifier) 와 FSI(formal system identifier) 가 DOCTYPE 에 동시에 기술되어 있을 경우
+   
+      ```
+      <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+
+      ```
+   
+   * 쿼크모드(quirks mode)로랜더링이 되어있는 경우
+   
+      1.DOCTYPE이 선언되어있지 않을 때
+   
+      2.브라우저가 선언된 DOCTYPE에 따라 예전문서라고 판단 될때,
+   
+      3.DTD에 FPI(formal public identifier) 만 기술되어 있을 경우
+      ```
+      <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+      ```
+      즉, 이전 세대의 브라우저에 맞는 비표준의 CSS를 적용합니다. 쿼크모드의 목적은 오래된 페이지들이 최신 브라우저에서 깨지지 않게 하기위함이 목적입니다.
+ 
+ 참고 링크1 : [C.M.A API](http://chongmoa.com/html/441)
+ 
+ 참고 링크2 : [A to Z](https://a-tothe-z.tistory.com/4)
+ 
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
 
