--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -45,7 +45,7 @@ HTML
 참고 링크1: [WEBDIR](https://webdir.tistory.com/40)
 
 참고 링크2: [C.M.A API](http://chongmoa.com/html/441)
-
+</hr>
 2. 표준모드(standards mode)와 쿽크모드(quirks mode)의 다른 점은 무엇인가요?
 
    위에 2가지 모드는 HTML 문서에 맨 위에 선언된 DOCTYPE 에 따라 렌더링 모드를 선택하게 되는데, 이 과정을 Doctype Sniffing 또는 Doctype Switching 이라고 한다.
@@ -78,6 +78,79 @@ HTML
  참고 링크1 : [C.M.A API](http://chongmoa.com/html/441)
  
  참고 링크2 : [A to Z](https://a-tothe-z.tistory.com/4)
+ </hr>
  
+ 3.XML과 XHTML의 다른 점은 무엇인가요
+   
+   * HTML(HyperText Mark-up Language)
+   
+     웹(WWW, World Wide Web)을 통해, 문서를 볼때, 사용되는 언어.
+     
+   * XHTML(Extensible HyperText Mark-up Language)
+   
+    HTML을 XML 바탕으로  새롭게 구성 단어 그대로 HTML규격의 문제점을 극복한 문서규격입니다. xML 문법을 따르므로, HTML과 문법규칙이 조금씩 다릅니다.
+    HTML보다 엄격합니다.
+
+   * 차이점
+   
+      1.CSS를 이해하는 방식이 다릅니다.
+      
+        + CSS 선택자의 대소문자를 가립니다.
+        
+        + HTML에서는 background-color, background-image, overflow 속성이 최상위 요소(HTML)에도 적용되지만 XHTML에서는 적용되지 않는다.
+        
+        + HTML에서는 tbody 태그를 마크업하지 않아도 CSS스타일이 적용되지만, XHTML은 적용되지 않는다.
+        
+        ```
+        tbody th { text-align: left }
+        ```
+        
+      2.클라이언트의 스크립트(Javascript)를 다루는 방식이 다릅니다.
+      
+        + document.write() 메소드가 적용되지 않습니다.
+        
+        + 표준이 아닌 .innerHTML 속성을 사용할 수 없습니다.
+        
+      3.태그 입력
+      
+        + HTML은 태그가 닫히지 않아도 허용이 되지만, XHTML은 무조건 종료 태그가 있어야합니다.
+        
+        ```
+          <!-- HTML -->
+          <p>blah blah blah
+
+          <!-- XHTML -->
+          <p>blah blah blah</p>  
+        ```
+        
+        + 빈 요소 태그인 img, br, link, hr, input 태그는 XHTML에서는 무조건 '/>'로 닫아야합니다.
+        
+          ```
+          <!-- HTML -->
+          <img src="test.png">
+
+          <!-- XHTML -->
+          <img src="test.png" />
+          ```
+        
+        + HTML은 태그명과 속성에 대소문자 둘다 사용가능, XHTML은 불가능.
+        
+        + HTML은 속성값 생략 가능, XHTML은 불가능.
+        
+        ```
+          <!-- HTML -->
+          <input type="text" readonly>
+
+          <!-- XHTML -->
+          <input type="text" readonly="readonly" />
+          ```
+      
+      
+참고 링크1 : [HTML 기초(markup, 브라우저 종류/XHTML,XML,HTML5 DHTML차이)](https://aboooks.tistory.com/38)
+
+참고 링크2 : [wystan's tales](http://blog.wystan.net/2007/05/24/xhtml-vs-html)
+
+참고 링크3 : [개발자의 길](https://jang8584.tistory.com/249)
+
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
 
