--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -80,7 +80,7 @@ HTML
  참고 링크2 : [A to Z](https://a-tothe-z.tistory.com/4)
  </hr>
  
- 3.XML과 XHTML의 다른 점은 무엇인가요
+ 3.HTML과 XHTML의 다른 점은 무엇인가요
    
    * HTML(HyperText Mark-up Language)
    
