--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -152,5 +152,34 @@ HTML
 
 참고 링크3 : [개발자의 길](https://jang8584.tistory.com/249)
 
+ 4.XHTML을 이용한 페이지의 한계점은 무엇이 있나요?
+ 
+ 5.application/xhtml+xml으로 지정한 페이지에 어떠한 문제가 있나요?
+ 
+ 6.다국어가 포함된 페이지는 어떤 방식으로 제공하나요?
+ 
+ 7.다국어 페이지를 제공하는 여러 방법에 관해 설명해주세요.
+ 
+ 8.data-속성은 무엇을 하는 것인가요? 사용했을 때 이점은 무엇인가요?
+
+  * HTML5에 도입이 되어 input hidden 태그에 데이터를 넣는 방법외에 데이터를 넣고 싶을때 사용하는 방법입니다. 
+  
+  태그 어느 곳에서 data-속성을 통해 input hidden 태그를 쓰지 않고도 해당하는 데이터를 저장할 수 있는 이점이 있습니다.
+  
+  script에서 불러올때는 속성명이 CamelCase로 변경되어 조회됩니다. 태그안에 저장되는 데이터이기 때문에, 민감한 데이터는 넣지 않는것이 좋습니다.
+  
+  ```
+  <ul>
+    <li data-age="30" data-eng-name="HONG GIL DONG">홍길동</li>
+  </ul>
+  
+  /*접근 방법*/
+  document.getElementById('uls').getElementsByTagName('li')[0].dataset //결과 "{"age":"30","engName":"HONG GIL DONG"}"
+  //데이터 INSERT
+  document.getElementById('uls').getElementsByTagName('li')[0].dataset.hasPet=true;//camelCase로 INSERT한다.
+  결과
+  <!-- <li data-age="30" data-eng-name="HONG GIL DONG" data-has-pet="true">홍길동</li> -->
+  ```
+
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
 
