--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -164,9 +164,9 @@ HTML
 
   * HTML5에 도입이 되어 input hidden 태그에 데이터를 넣는 방법외에 데이터를 넣고 싶을때 사용하는 방법입니다. 
   
-  태그 어느 곳에서 data-속성을 통해 input hidden 태그를 쓰지 않고도 해당하는 데이터를 저장할 수 있는 이점이 있습니다.
+  * 태그 어느 곳에서 data-속성을 통해 input hidden 태그를 쓰지 않고도 해당하는 데이터를 저장할 수 있는 이점이 있습니다.
   
-  script에서 불러올때는 속성명이 CamelCase로 변경되어 조회됩니다. 태그안에 저장되는 데이터이기 때문에, 민감한 데이터는 넣지 않는것이 좋습니다.
+  * script에서 불러올때는 속성명이 CamelCase로 변경되어 조회됩니다. 태그안에 저장되는 데이터이기 때문에, 민감한 데이터는 넣지 않는것이 좋습니다.
   
   ```
   <ul>
