--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -181,5 +181,69 @@ HTML
   <!-- <li data-age="30" data-eng-name="HONG GIL DONG" data-has-pet="true">홍길동</li> -->
   ```
 
+ 9.HTML5를 오픈 웹 플랫폼(open web platform)으로 생각해본다면, 어떤 것들로 구성돼 있을까요?
+
+ 10.쿠키(Cookies)와 세션저장소(sessionStorage)와 로컬저장소(localStorage)의 차이점을 설명해주세요.
+ 
+   * 쿠키
+     + HTML5 STORAGE가 나오기 이전에 브라우저에서 사용했던 저장소 역할을 했습니다. 
+     
+     + 유효기간이 있으며. Key-value방식으로 데이터가 저장됩니다. 4KB의 용량제한이 있습니다. 
+     
+     + 쿠키를 통해 특정 데이터를 저장해두었다가 서버요청이 올때, 쿠키는 서버를 통해 전송이 됩니다.
+     
+     + 서버요청을 할때마다 쿠키를 전송하기때문에 성능이 떨어질수있는 요인이 있기때문에, 웹스토리지 API(SESSION, LOCAL STORAGE)를 권장합니다.
+     
+     + 일반적으로는 세션 쿠키가 생성되며, 브라우져가 종료되면 소멸이 됩니다. Expires나 Max-Age를 명시하면 닫히더라도 기간동안 유지되는 쿠키가 생성됩니다.
+     ```
+     <!-- 쿠키 설정-->
+     Set-Cookie : name : LEE; Expires=Thu, 16 Jul 2020 07:28:00 GMT;
+     
+     /*script 상에서 Cookie 접근*/
+     document.cookie //"name : LEE"
+     ```
+    
+   * 로컬저장소(localStorage)
+   
+     + window 객체 안에 있으며, window.localStorage(localStorage)로 접근이 가능합니다.
+     
+     + cookie와 똑같이 key-value 방식으로 저장이 됩니다.
+     
+     + 표준 스팩은 최대 5MB까지 저장할수 있습니다만, 도메인별 용량 제한이 있습니다.
+     
+     ```
+     /* storage data set */
+     localStorage.setItem('name','LEE');
+     localStorage.setItem('human',{name : 'JOHN',age: 30, hasPet : true});
+     
+     //object add
+     localStorage.setItem('humanObj',JSON.stringfy({name : 'JOHN',age: 30, hasPet : true}));
+     
+     /*storage get data*/
+      localStorage.getItem('name');//결과 LEE
+      localStorage.getItem('human')//"[object Object]"
+      
+      //object get
+      JSON.parse(localStorage.getItem('humanObj'))//{name: "JOHN", age: 30, hasPet: true}
+      
+     /*storage item remove*/
+     localStorage.removeItem('name');
+     
+     /*storage item clear*/
+     localStorage.clear()
+     ```
+     
+   * 세션저장소(sessionStorage)  
+     
+     + window 객체 안에 있으며, window.sessionStorage(sessionStorage)로 접근이 가능합니다.
+     
+     + 로컬 저장소와 동일한 메소드를 가지고 있으며, 데이터가 영구적으로 보관되어있는점을 제외하고는 똑같은 기능입니다.
+     
+  참고 링크1 : [ZeroCho Blog](https://www.zerocho.com/category/HTML&DOM/post/5918515b1ed39f00182d3048)
+  
+  참고 링크2 : [MDN HTTP 쿠키](https://developer.mozilla.org/ko/docs/Web/HTTP/Cookies)
+  
+  참고 링크3 : [박종명의 아름다운 개발 since 2010.06](https://m.mkexdev.net/111)
+  
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
 
