--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -245,5 +245,25 @@ HTML
   
   참고 링크3 : [박종명의 아름다운 개발 since 2010.06](https://m.mkexdev.net/111)
   
+ 11. <script>, <script async>와 <script defer>의 차이점에 관해 설명해주세요.
+   
+   * HTML는 실행을 위에서 아래로 내려가면서 실행합니다.(<html>태그 시작부터 닫히는 시점(</html>)순서로 파싱이 됨.) script를 </body>전에 실행시키면, 파싱이 끝났기때문에, async/defer를 넣어도 의미가 없습니다.
+  
+   * async
+      + 스크립트 파일이 비동기적으로 실행될 수 있음을 나타내기 위해 사용됩니다. 즉 페이지를 파싱되는 중간에도 실행된다는 의미입니다. 
+      다른 파일과 종속되어있지 않고, 실행순서가 랜더링에 영향이 없을때 사용하는것이 유용합니다.
+      
+   * defer
+      + 브라우저가 페이지 파싱이 완료된다음에 실행이 됩니다. DOM의 제어에 영향이 있다면, 파싱이 완료된 후에 정상적인 작업을 수행해야 하기때문에 이속성을 사용합니다.
+      
+   * script
+      + 브라우저가 페이지를 파싱하기 전에 스크립트를 가져와 바로 실행시킵니다.
+      
+  참고 링크1 : [이 세상에 하나는 남기고 가자](https://blog.asamaru.net/2017/05/04/script-async-defer/)
+  
+  참고 링크2 : [코딩의 시작 Tcp School](http://tcpschool.com/html-tag-attrs/script-async)
+  
+  참고 링크3 : [기본기를 쌓는 정아마추어 코딩블로그](https://jeong-pro.tistory.com/90)
+  
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
 
