--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -247,7 +247,8 @@ HTML
   
  11. <script>, <script async>와 <script defer>의 차이점에 관해 설명해주세요.
    
-   * HTML는 실행을 위에서 아래로 내려가면서 실행합니다.(<html>태그 시작부터 닫히는 시점(</html>)순서로 파싱이 됨.) script를 </body>전에 실행시키면, 파싱이 끝났기때문에, async/defer를 넣어도 의미가 없습니다.
+   * HTML는 실행을 위에서 아래로 내려가면서 실행합니다.(<html>태그 시작부터 닫히는 시점(/html)순서로 파싱이 됨.) 
+  script를 body 태그 종료전에 넣었다면, 파싱이 끝났기때문에, async/defer를 넣어도 의미가 없습니다.
   
    * async
       + 스크립트 파일이 비동기적으로 실행될 수 있음을 나타내기 위해 사용됩니다. 즉 페이지를 파싱되는 중간에도 실행된다는 의미입니다. 
