--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -258,7 +258,7 @@ HTML
       + 브라우저가 페이지 파싱이 완료된다음에 실행이 됩니다. DOM의 제어에 영향이 있다면, 파싱이 완료된 후에 정상적인 작업을 수행해야 하기때문에 이속성을 사용합니다.
       
    * script
-      + 브라우저가 페이지를 파싱하기 전에 스크립트를 가져와 바로 실행시킵니다.
+      + 브라우저가 페이지를 파싱하기 전에 스크립트를 가져와 바로 실행시킵니다. 즉, script의 인라인 내용은 즉시 해석되고 실행되고, 외부에서 가져오는경우는 가져올때까지 HTML 구문해석이 되지 않습니다.
       
   참고 링크1 : [이 세상에 하나는 남기고 가자](https://blog.asamaru.net/2017/05/04/script-async-defer/)
   
