--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -266,6 +266,12 @@ HTML
   
   참고 링크3 : [기본기를 쌓는 정아마추어 코딩블로그](https://jeong-pro.tistory.com/90)
   
+   12. CSS<link>를 <head></head>사이에 쓰는 것과 JS<script>를 '/body'뒤에 사용하는 것은 좋은 사용법일까요? 어디에 배치하는 게 좋을까요?
+  
+  기본적으로 HTML은 순차적으로 위에서 아래로 실행이 되는데, DOM에 접근할수 있는 JS파일은 HTML의 구문해석이 완료되기전에 해석되면, DOM제어가 되지 않을수가 있기때문에 /body태그 끝에 사용하는것이 좋은 방법이라고 생각합니다. css의 경우는 화면을 랜더링하는데 필요한 정보를 담고 있으므로 해당 내용을 출력하기 전에 해석되는 것이 당연히 유리다고 생각합니다.
+
+ 참고 링크1 : [이 세상에 하나는 남기고 가자](https://blog.asamaru.net/2017/05/04/script-async-defer/)
+  
 -----
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
 
