--- a/Questions/프론트엔드 정리.md
+++ b/Questions/프론트엔드 정리.md
@@ -268,10 +268,81 @@ HTML
   
    12. CSS<link>를 <head></head>사이에 쓰는 것과 JS<script>를 '/body'뒤에 사용하는 것은 좋은 사용법일까요? 어디에 배치하는 게 좋을까요?
   
-  기본적으로 HTML은 순차적으로 위에서 아래로 실행이 되는데, DOM에 접근할수 있는 JS파일은 HTML의 구문해석이 완료되기전에 해석되면, DOM제어가 되지 않을수가 있기때문에 /body태그 끝에 사용하는것이 좋은 방법이라고 생각합니다. css의 경우는 화면을 랜더링하는데 필요한 정보를 담고 있으므로 해당 내용을 출력하기 전에 해석되는 것이 당연히 유리다고 생각합니다.
+  * CSS<link>를 <head></head>사이에 쓰는 것
+  
+   + css의 경우는 HTML과 CSS를 동시에 랜더링 하는데 필요한 정보를 담고 있으므로 해당 내용을 출력하기 전에 해석되는 것이 당연히 유리다고 생각합니다.
+   
+  * JS<script>를 <body></body>뒤에 사용하는 것
+  
+  기본적으로 HTML은 순차적으로 위에서 아래로 실행이 되는데, DOM 중간에 인라인 스크립트, 외부 스크립트가 있으면, PARSING을 멈추고 실행을 되기 때문에 페이지가 다운되는것처럼 보일수도있기때문에, 모든 DOM 랜더링을 완료한 후에 JS코드를 아래에 두는것이 좋습니다. 만약에 head 태그사이에 두어야한다면 defer속성을 사용하는것이 좋습니다.
 
  참고 링크1 : [이 세상에 하나는 남기고 가자](https://blog.asamaru.net/2017/05/04/script-async-defer/)
+ 
+ 참고 링크2 : [Sungmin Chris Yang](https://velog.io/@chris/front-end-interview-handbook-html#doctype%EC%9D%80-%EB%AC%B4%EC%97%87%EC%9D%84-%ED%95%98%EB%82%98%EC%9A%94)
   
+  13.Progressive rendering이란 무엇인가요?
+
+   * 콘텐츠를 최대한 빠르게 뿌리기 위해 웹 페이지 향상을 위해 사용하는 기법입니다. 
+   
+     + 이미지 레이지로딩(LazyLoading)
+        - 이미지를 한번에 로딩하지 않고, 스크롤할때마다 이미지를 로딩하는 기법입니다.
+        
+     + 보이는 콘텐츠의 우선순위 설정 (또는 스크롤 없이 볼 수 있는 렌더링)
+        - 맨처음 실행될때 스크롤없이 볼수있는 최소한의 HTML,CSS,JS 파일을 먼저랜더링. 이후 Defer속성을 이용하여, DOMContentLoaded/load 이벤트를 사용하여 다른 리소스와 내용을 로드할 수 있습니다. 
+     
+     + 비동기 HTML 프래그먼트
+        - 페이지의 백엔드에서 HTML의 일부를 브라우저로 가져온다.
+
+   14.이미지 태그에 srcset 속성을 사용하는 이유는 무엇인가요? 브라우저가 이 속성을 가진 콘텐츠를 평가할 때 사용하는 과정을 설명해보세요.
+   
+   * srcset 속성
+     + src속성과 다르게 브라우저에 사용될 이미지와 이미지의 크기들을 지정합니다. 단 이미지 크기는 px 단위가 아닌, w(Width 너비 디스크립터),x(이미지 크기 비율)디스크립터로 작성을 하는 것이 특징입니다.
+     
+     ```
+     <!-- srcset 예시-->
+     <img
+      srcset="SAMPLE_400.jpg 400w,
+              SAMPLE_600.jpg 600w,
+              SAMPLE_900.jpg 900w"
+      src="SAMPLE.jpg"
+      alt="SAMPLE" class="sample_img" 
+      width="400" <!-- 이미지가 400으로 고정 이때는 srcset 속성이 통하지 않음. -->
+      />
+      
+      <!-- 
+      결과 뷰포트의 너비가 400px 이하일떄 sample_400.jpg 이미지가 사용됩니다.
+      결과 뷰포트의 너비가 401px~600px 일떄 sample_600.jpg 이미지가 사용됩니다.
+      결과 뷰포트의 너비가 601px 이상일떄 sample_900.jpg 이미지가 사용됩니다.
+      -->
+     ```
+     + CSS의 미디어조건과 비슷하다고 생각하면 될꺼같습니다.
+     
+     ```
+      /*srcset을 media조건으로 표현*/
+     .sample_img {
+      width: 400px;
+      height: 400px;
+      background-image: url("SAMPLE_400.jpg");   
+      background-repeat: no-repeat;
+      }
+      @media (min-width: 401px) {
+       .sample_img {
+          width: 600px;
+          height: 600px;
+          background-image: url("SAMPLE_600.jpg");   
+        }
+      }
+      @media (min-width: 701px) {
+        .sample_img {
+          width: 900px;
+          height: 900px;
+          background-image: url("SAMPLE_900.jpg");   
+        }
+      }
+    ```
+     
+  참고 링크 1: [HEROPY TECH](https://heropy.blog/2019/06/16/html-img-srcset-and-sizes/)
+
 -----
 문제 참고 : [프론트엔드 면접 문제 은행](https://h5bp.org/Front-end-Developer-Interview-Questions/translations/korean/)
 
